# oop-lab2-notarius

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  welcomewindow.cpp  welcomewindow.ui
editor/: editortab.cpp  editortab.h  editorwindow.cpp  editorwindow.hpp  editorwindow.ui  noteeditor.cpp  noteeditor.h  noteeditor.hpp  noteeditor.ui
notes/: note.cpp  note.hpp  notecontext.cpp  notecontext.hpp
